PARTIE4: Tests unitaires et d'intégration - 20/20 tests réussis
- Tests unitaires Mockito: 11/11 passent avec flag expérimental
- Tests d'intégration Testcontainers: 9/9 passent avec Java 25
- Tests de stress Gatling: 4 scénarios créés
- Configuration surefire avec flag Byte Buddy expérimental
- Note: JaCoCo incompatible avec Java 25 (class file version 69)
- Tous les tests principaux fonctionnent correctement